univention-virtual-machine-manager-daemon (4.0.23-8) unstable; urgency=low

  * Bug #36640: Add memory debugger
  * Bug #36640: Fix memory leak in XML parsing

 -- Philipp Hahn <hahn@univention.de>  Thu, 05 Mar 2015 13:27:30 +0100

univention-virtual-machine-manager-daemon (4.0.23-7) unstable; urgency=low

  * Bug #37099: make EC2 error messages more understandable

 -- Andreas Peichert <peichert@univention.de>  Mon, 02 Mar 2015 12:50:22 +0100

univention-virtual-machine-manager-daemon (4.0.23-6) unstable; urgency=low

  * Bug #36567:  updated translation

 -- Drees Dormann <dormann@univention.de>  Mon, 16 Feb 2015 09:14:42 +0100

univention-virtual-machine-manager-daemon (4.0.23-5) unstable; urgency=low

  * Bug #36567:  updated translation

 -- Drees Dormann <dormann@univention.de>  Fri, 13 Feb 2015 10:19:33 +0100

univention-virtual-machine-manager-daemon (4.0.23-4) unstable; urgency=medium

  * Bug #33963: fixup

 -- Florian Best <best@univention.de>  Tue, 03 Feb 2015 14:58:54 +0100

univention-virtual-machine-manager-daemon (4.0.23-3) unstable; urgency=medium

  * Bug #33963: fixup

 -- Florian Best <best@univention.de>  Tue, 03 Feb 2015 13:48:38 +0100

univention-virtual-machine-manager-daemon (4.0.23-2) unstable; urgency=medium

  * Bug #33963: workarounds for the tree reload if UVMM doesn't run at module
  	startup

 -- Florian Best <best@univention.de>  Tue, 03 Feb 2015 12:54:45 +0100

univention-virtual-machine-manager-daemon (4.0.23-1) unstable; urgency=medium

  * Bug #33963: show error message if the UVMM daemon is not running

 -- Florian Best <best@univention.de>  Mon, 02 Feb 2015 13:29:07 +0100

univention-virtual-machine-manager-daemon (4.0.22-2) unstable; urgency=low

  * Bug #36105: Fix VNC running on localhost only.

 -- Philipp Hahn <hahn@univention.de>  Tue, 27 Jan 2015 13:03:50 +0100

univention-virtual-machine-manager-daemon (4.0.22-1) unstable; urgency=low

  * Bug #36105: Fix VNC running on localhost only.
